created a structure for navigation

--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+<div class="main-container">
 
-    
+<div class="nav-container">
+<img src="./logo.jpg" width="120.71px" height="24px">
+<nav>
+    <a href="#">How it works</a>
+    <a href="#">Blog</a>
+    <a href="#">Support</a>
+</nav>
+<img src="./nav-img.jpg" width="194px" height="24px">
+</div>
+
+
+
+</div>
+
 </body>
 </html>
