created a structure for the header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 </div>
 
 
+<header>
+    <div class="header-container">
+        <h1>Create your first
+            decentralized wallet</h1>
+            <p>The easiest way to manage multiple cryptocurrency assets</p>
+            <button>Create wallet</button>
+    </div>
+
+        <img src="./header-img.jpg">
+    
+</header>
+
+
 
 </div>
 
