created the third mains' article structure

--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
      </article>  
 
      
-
-
-
+     <article>
+        <h3>Roadmap</h3>
+        <img src="./main-img2.jpg">
+    </article>
+    
     </section>
 </main>
 
