created the second section & the fourth article

--- a/index.html
+++ b/index.html
@@ -51,8 +51,22 @@
         <h3>Roadmap</h3>
         <img src="./main-img2.jpg">
     </article>
-    
+
     </section>
+
+
+
+<section>
+
+    <article>
+        <h3>Multi-currencies</h3>
+        <img src="./main-img3.jpg">
+        <p>Receive, send and store the most popular coins, like Bitcoin, Ethereum, Litecoin, Dash and lots more.</p>
+     </article>
+
+
+</section>
+
 </main>
 
 
