--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
            Bitcoin tokens (Omnilayer) is coming soon.</p>
     </article>
 
+    <article>
+        <h3>Exchange</h3>
+        <p>In-app exchange is supported by ShapeShift, it allows to convert coins to each other in the most intuitive and easiest way.</p>
+        <img src="./main-img5.jpg">
+    </article>
+
 </section>
 
 </main>
