created a footer & the first divs' structure

--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
 </main>
 
 
+<footer>
+    <div>
+        <h5>About</h5>
+        <nav>
+            <a href="#">Introducing</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Privacy Policy</a>
+        </nav>
+    </div>
+
+</footer>
+
+
 
 </div>
 
