created the second divs' structure

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
         </nav>
     </div>
 
+
+    <div>
+        <h5>Contact</h5>
+        <a href="#">hello@dappywallet.com</a>
+        <img src="./nav-img.jpg">
+    </div>
+
 </footer>
 
 
