created the third divs' structure

--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
         <img src="./nav-img.jpg">
     </div>
 
+
+    <div>
+        <h5>Newsletter</h5>
+        <p>Please enter your e-mail if want to receive updates.</p>
+    <form>
+        <input type="email" name="email" id="email" placeholder="Your e-mail">
+        <button>Subscribe</button>
+    </form>
+        <small>Designed by <strong>Hodl Horse</strong>  , Developed by <strong>BC Net</strong> </small>
+    </div>
+
 </footer>
 
 
