--- a/index.html
+++ b/index.html
@@ -1,121 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
 <div class="main-container">
-
 <div class="nav-container">
-<img src="./logo.jpg" width="120.71px" height="24px">
-<nav>
-    <a href="#">How it works</a>
-    <a href="#">Blog</a>
-    <a href="#">Support</a>
-</nav>
-<img src="./nav-img.jpg" width="194px" height="24px">
-</div>
+  <img src="./images/logo.jpg" width="120.71px" height="24px" />
+     <nav>
+          <a href="#">How it works</a>
+          <a href="#">Blog</a>
+          <a href="#">Support</a>
+        </nav>
+        <img src="./images/nav-img.jpg" width="194px" height="24px" />
+      </div>
 
+      <header>
+        <div class="header-container">
+          <h1>Create your first decentralized wallet</h1>
+          <p>The easiest way to manage multiple cryptocurrency assets</p>
+          <button>Create wallet</button>
+        </div>
 
-<header>
-    <div class="header-container">
-        <h1>Create your first
-            decentralized wallet</h1>
-            <p>The easiest way to manage multiple cryptocurrency assets</p>
-            <button>Create wallet</button>
-    </div>
+        <img src="./images/header-img.jpg" />
+      </header>
 
-        <img src="./header-img.jpg">
-</header>
+      <main>
+        <section>
+          <article>
+            <p>
+              Dappy is light wallet powered by Blockstack. It uses Gaia
+              decentralized storage and encryption option. Dappy doesn't store
+              or proceed user private key, the all data are securely stored in
+              the Gaia. Dappy was created by the BC Net that trust in crypto and
+              decentralized applications.
+            </p>
+          </article>
 
+          <article>
+            <h3>Free and open source</h3>
+            <img src="./images/main-img1.jpg" />
+            <p>
+              Fully open and transparent wallet. Our code is
+              <strong>open source</strong> and trusted by Blockstack Team.
+            </p>
+          </article>
 
+          <article>
+            <h3>Roadmap</h3>
+            <img src="./images/main-img2.jpg" />
+          </article>
+        </section>
 
-<main>
-    <section>
-       <article>
-           <p>Dappy is light wallet powered by Blockstack. It uses Gaia decentralized storage and encryption option. Dappy doesn't store or proceed user private key, the all data are securely stored in the Gaia. Dappy was created by the BC Net that trust in crypto and decentralized applications.</p>
-       </article>
+        <section>
+          <article>
+            <h3>Multi-currencies</h3>
+            <img src="./images/main-img3.jpg" />
+            <p>
+              Receive, send and store the most popular coins, like Bitcoin,
+              Ethereum, Litecoin, Dash and lots more.
+            </p>
+          </article>
 
-       
-     <article>
-         <h3>Free and open source</h3>
-         <img src="./main-img1.jpg">
-         <p>Fully open and transparent wallet. Our code is <strong>open source</strong> and trusted by Blockstack Team.</p>
-     </article>  
+          <article>
+            <h3>Tokens</h3>
+            <img src="./images/main-img4.jpg" />
+            <p>
+              Full support for any tokens on Ethereum network. Bitcoin tokens
+              (Omnilayer) is coming soon.
+            </p>
+          </article>
 
-     
-     <article>
-        <h3>Roadmap</h3>
-        <img src="./main-img2.jpg">
-    </article>
+          <article class="sixth-article">
+            <h3>Exchange</h3>
+            <p>
+              In-app exchange is supported by ShapeShift, it allows to convert
+              coins to each other in the most intuitive and easiest way.
+            </p>
+            <img src="./images/main-img5.jpg" />
+          </article>
+        </section>
+      </main>
 
-    </section>
-
-
-
-<section>
-
-    <article>
-        <h3>Multi-currencies</h3>
-        <img src="./main-img3.jpg">
-        <p>Receive, send and store the most popular coins, like Bitcoin, Ethereum, Litecoin, Dash and lots more.</p>
-     </article>
-
-
-     <article>
-        <h3>Tokens</h3>
-        <img src="./main-img4.jpg">
-        <p>Full support for any tokens on Ethereum network.
-           Bitcoin tokens (Omnilayer) is coming soon.</p>
-    </article>
-
-    <article class="sixth-article">
-        <h3>Exchange</h3>
-        <p>In-app exchange is supported by ShapeShift, it allows to convert coins to each other in the most intuitive and easiest way.</p>
-        <img src="./main-img5.jpg">
-    </article>
-
-</section>
-
-</main>
-
-
-<footer>
-    <div>
-        <h5>About</h5>
-        <nav>
+      <footer>
+        <div>
+          <h5>About</h5>
+          <nav>
             <a href="#">Introducing</a>
             <a href="#">Terms of Service</a>
             <a href="#">Privacy Policy</a>
-        </nav>
+          </nav>
+        </div>
+
+        <div>
+          <h5>Contact</h5>
+          <a href="#">hello@dappywallet.com</a>
+          <img src="./images/nav-img.jpg" />
+        </div>
+
+        <div>
+          <h5>Newsletter</h5>
+          <p>Please enter your e-mail if want to receive updates.</p>
+          <form>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Your e-mail"z
+            />
+            <button>Subscribe</button>
+          </form>
+          <small>
+            Designed by  <strong>Hodl Horse</strong> , Developed by 
+            <strong>BC Net</strong>
+          </small>
+        </div>
+      </footer>
     </div>
-
-
-    <div>
-        <h5>Contact</h5>
-        <a href="#">hello@dappywallet.com</a>
-        <img src="./nav-img.jpg">
-    </div>
-
-
-    <div>
-        <h5>Newsletter</h5>
-        <p>Please enter your e-mail if want to receive updates.</p>
-    <form>
-        <input type="email" name="email" id="email" placeholder="Your e-mail">
-        <button>Subscribe</button>
-    </form>
-        <small>Designed by <strong>Hodl Horse</strong>  , Developed by <strong>BC Net</strong> </small>
-    </div>
-
-</footer>
-
-
-
-</div>
-
-</body>
+  </body>
 </html>
