added a responsive design

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </main>
 
       <footer>
-        <div>
+        <div class="about">
           <h5>About</h5>
           <nav>
             <a href="#">Introducing</a>
@@ -95,13 +95,13 @@
           </nav>
         </div>
 
-        <div>
+        <div class="contact">
           <h5>Contact</h5>
           <a href="#">hello@dappywallet.com</a>
           <img src="./images/nav-img.jpg" />
         </div>
 
-        <div>
+        <div class="newsletter">
           <h5>Newsletter</h5>
           <p>Please enter your e-mail if want to receive updates.</p>
           <form>
