fixed some details

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 <div class="main-container">
 <div class="nav-container">
-  <img src="./images/logo.jpg" width="120.71px" height="24px" />
+  <img src="./images/logo.jpg" width="120.71px" height="24px">
      <nav>
           <a href="#">How it works</a>
           <a href="#">Blog</a>
           <a href="#">Support</a>
         </nav>
-        <img src="./images/nav-img.jpg" width="194px" height="24px" />
+        <img src="./images/nav-img.jpg" width="194px" height="24px">
       </div>
 
       <header>
@@ -25,7 +25,7 @@
           <button>Create wallet</button>
         </div>
 
-        <img src="./images/header-img.jpg" />
+        <img src="./images/header-img.jpg">
       </header>
 
       <main>
@@ -42,7 +42,7 @@
 
           <article>
             <h3>Free and open source</h3>
-            <img src="./images/main-img1.jpg" />
+            <img src="./images/main-img1.jpg">
             <p>
               Fully open and transparent wallet. Our code is
               <strong>open source</strong> and trusted by Blockstack Team.
@@ -51,14 +51,14 @@
 
           <article>
             <h3>Roadmap</h3>
-            <img src="./images/main-img2.jpg" />
+            <img src="./images/main-img2.jpg">
           </article>
         </section>
 
         <section>
           <article>
             <h3>Multi-currencies</h3>
-            <img src="./images/main-img3.jpg" />
+            <img src="./images/main-img3.jpg">
             <p>
               Receive, send and store the most popular coins, like Bitcoin,
               Ethereum, Litecoin, Dash and lots more.
@@ -67,7 +67,7 @@
 
           <article>
             <h3>Tokens</h3>
-            <img src="./images/main-img4.jpg" />
+            <img src="./images/main-img4.jpg">
             <p>
               Full support for any tokens on Ethereum network. Bitcoin tokens
               (Omnilayer) is coming soon.
@@ -80,7 +80,7 @@
               In-app exchange is supported by ShapeShift, it allows to convert
               coins to each other in the most intuitive and easiest way.
             </p>
-            <img src="./images/main-img5.jpg" />
+            <img src="./images/main-img5.jpg">
           </article>
         </section>
       </main>
@@ -98,7 +98,7 @@
         <div class="contact">
           <h5>Contact</h5>
           <a href="#">hello@dappywallet.com</a>
-          <img src="./images/nav-img.jpg" />
+          <img src="./images/nav-img.jpg">
         </div>
 
         <div class="newsletter">
@@ -109,8 +109,7 @@
               type="email"
               name="email"
               id="email"
-              placeholder="Your e-mail"z
-            />
+              placeholder="Your e-mail">
             <button>Subscribe</button>
           </form>
           <small>
