fixed some errors in html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 <div class="main-container">
 <div class="nav-container">
-  <img src="./images/logo.jpg" width="120.71px" height="24px" alt="">
+  <img src="./images/logo.jpg" width="120.71" height="24" alt="">
      <nav>
           <a href="#">How it works</a>
           <a href="#">Blog</a>
           <a href="#">Support</a>
         </nav>
-        <img src="./images/nav-img.jpg" width="194px" height="24px" alt="">
+        <img src="./images/nav-img.jpg" width="194" height="24" alt="">
       </div>
 
       <header>
