deleted one photo from the second article

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
           <article>
             <h3>Roadmap</h3>
-            <img src="./images/main-img2.jpg" alt="">
+            <img src="" alt="">
           </article>
         </section>
 
