created one main container to the third article

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 
           <article>
             <h3>Roadmap</h3>
-            <img src="" alt="">
+            <div>
+              <img src="" alt="">
+            </div>
+            
           </article>
         </section>
 
