added a class to the roadmap's container

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
           <article>
             <h3>Roadmap</h3>
-            <div>
+            <div class="roadmap">
               <img src="" alt="">
             </div>
             
