created the first child container to  the roadmap

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           <article>
             <h3>Roadmap</h3>
             <div class="roadmap">
+              <div>
               <img src="" alt="">
+              </div>
             </div>
             
           </article>
