gave a class to the first child container

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <article>
             <h3>Roadmap</h3>
             <div class="roadmap">
-              <div>
+              <div class="first-map">
               <img src="" alt="">
               </div>
             </div>
