set an image to the first map container

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>Roadmap</h3>
             <div class="roadmap">
               <div class="first-map">
-              <img src="" alt="">
+              <img src="./images/green-circle.png" alt="">
               </div>
             </div>
             
