set an image to the first map

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <div class="roadmap">
               <div class="first-map">
               <img src="./images/green-circle.png" alt="">
+              <img src="./images/line.png" alt="">
               </div>
             </div>
             
