gave a span to the first map

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <div class="first-map">
               <img src="./images/green-circle.png" alt="">
               <img src="./images/line.png" alt="">
+              <span>May 2018</span>
               </div>
             </div>
             
