--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
               <img src="./images/green-circle.png" alt="">
               <img src="./images/line.png" alt="">
               <span>May 2018</span>
+              <p>Blockstack 
+                Autorisation</p>
               </div>
             </div>
             
