created the second map to the roadmap

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <article>
             <h3>Roadmap</h3>
             <div class="roadmap">
+
               <div class="first-map">
               <img src="./images/green-circle.png" alt="">
               <img src="./images/line.png" alt="">
@@ -59,6 +60,16 @@
               <p>Blockstack 
                 Autorisation</p>
               </div>
+
+
+
+        <div>
+          
+        </div>
+
+
+
+
             </div>
             
           </article>
