gave the second img to the second map

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
         <div class="second-map">
             <img src="./images/green-circle.png" alt="">
+            <img src="./images/line.png" alt="">
         </div>
 
 
