gave a paragraph to the second map

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         <div class="second-map">
             <img src="./images/green-circle.png" alt="">
             <img src="./images/line.png" alt="">
+            <p>Decentralized
+              storage Gaia</p>
         </div>
 
 
