gave a paragraph to the third map

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
         <div class="third-map">
           <img src="./images/green-circle.png" alt="">
-
+          <p>BTC, ETH, ETC, LTC,
+            BCH, BTG, DOGE, 
+            DCR, DACH</p>
         </div>
 
 
