--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
               <span>May 2018</span>
               <p>Blockstack 
                 Autorisation</p>
+          
+        <img src="./images/green-circle.png" alt="">
+  
               </div>
 
 
