--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 Autorisation</p>
           
         <img src="./images/green-circle.png" alt="">
-  
+        <img src="./images/line.png" alt="">
               </div>
 
 
