gave a paragraph to the first map of the roadmap

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
           
         <img src="./images/green-circle.png" alt="">
         <img src="./images/line.png" alt="">
+        <p>Support
+          ERC20 tokens</p>
               </div>
 
 
