--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             <img src="./images/line.png" alt="">
             <p>Decentralized
               storage Gaia</p>
+
+     
+      <img src="./images/green-circle.png" alt="">
+      <img src="./images/line.png" alt="">
+
         </div>
 
 
