--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
      
       <img src="./images/green-circle.png" alt="">
       <img src="./images/line.png" alt="">
+      <p>Support
+        Custom token</p>
 
         </div>
 
