added an image to the third map

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
           <p>BTC, ETH, ETC, LTC,
             BCH, BTG, DOGE, 
             DCR, DACH</p>
+
+    <img src="./images/green-circle.png" alt="">
+
         </div>
 
 
