gave span and paragraph to the third roadmap

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             DCR, DACH</p>
 
     <img src="./images/green-circle.png" alt="">
-
+    <span>June 2018</span>
+    <p>Exchange powered
+      by ShapeShift</p>
         </div>
 
 
