gave two images to the first map

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
         <img src="./images/line.png" alt="">
         <p>Support
           ERC20 tokens</p>
+
+
+     <img src="./images/blue-circle.png" alt="">
+     <img src="./images/line.png" alt="">
+
               </div>
 
 
