added a span and paragraph to the first map

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 
      <img src="./images/blue-circle.png" alt="">
      <img src="./images/line.png" alt="">
+     <span>2018 – 2019</span>
+     <p>Add more coins:
+      ZEC, DCR, XRP...</p>
 
               </div>
 
