added two more images to the second map

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
       <p>Support
         Custom token</p>
 
+<img src="./images/grey-circle.png" alt="">
+<img src="./images/line.png" alt="">
+
+
         </div>
 
 
