gave a p to the second roadmap

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 
 <img src="./images/grey-circle.png" alt="">
 <img src="./images/line.png" alt="">
+<p>Blockstack
+  contact list</p>
 
 
         </div>
