gave an image and a paragraph to the third map

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
     <span>June 2018</span>
     <p>Exchange powered
       by ShapeShift</p>
+
+<img src="./images/grey-circle.png" alt="">
+<p>Support token
+  for each coins</p>
+
+
+
         </div>
 
 
