created a div with class to all blocks

--- a/index.html
+++ b/index.html
@@ -54,44 +54,59 @@
             <div class="roadmap">
 
               <div class="first-map">
+
+            <div class="block">
               <img src="./images/green-circle.png" alt="">
               <img src="./images/line.png" alt="">
               <span>May 2018</span>
               <p>Blockstack 
                 Autorisation</p>
-          
+           </div>
+
+
+    <div class="block">
         <img src="./images/green-circle.png" alt="">
         <img src="./images/line.png" alt="">
         <p>Support
           ERC20 tokens</p>
+  </div>
 
-
+  <div class="block">
      <img src="./images/blue-circle.png" alt="">
      <img src="./images/line.png" alt="">
      <span>2018 – 2019</span>
      <p>Add more coins:
       ZEC, DCR, XRP...</p>
+</div>
+
 
               </div>
 
 
 
         <div class="second-map">
+
+          <div class="block">
             <img src="./images/green-circle.png" alt="">
             <img src="./images/line.png" alt="">
             <p>Decentralized
               storage Gaia</p>
-
+         </div>
      
+
+    <div class="block">
       <img src="./images/green-circle.png" alt="">
       <img src="./images/line.png" alt="">
       <p>Support
         Custom token</p>
+    </div>
 
-<img src="./images/grey-circle.png" alt="">
-<img src="./images/line.png" alt="">
-<p>Blockstack
+<div class="block">
+  <img src="./images/grey-circle.png" alt="">
+  <img src="./images/line.png" alt="">
+  <p>Blockstack
   contact list</p>
+</div>
 
 
         </div>
@@ -99,19 +114,27 @@
 
 
         <div class="third-map">
+
+        <div class="block">
           <img src="./images/green-circle.png" alt="">
           <p>BTC, ETH, ETC, LTC,
             BCH, BTG, DOGE, 
             DCR, DACH</p>
+        </div>
 
+<div class="block">
     <img src="./images/green-circle.png" alt="">
     <span>June 2018</span>
     <p>Exchange powered
       by ShapeShift</p>
+</div>
 
+
+<div class="block">
 <img src="./images/grey-circle.png" alt="">
 <p>Support token
   for each coins</p>
+</div>
 
 
 
