created the fourth block of the first map

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 </div>
 
 
+<div class="block">
+  <img src="./images/grey-circle.png" alt="">
+  <img src="./images/line.png" alt="">
+  <p>Support private key
+    in different formats</p>
+</div>
+
+
               </div>
 
 
