added the fourth block of the third map

--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
 </div>
 
 
+<div class="block">
+   <img src="./images/grey-circle.png" alt="">
+   <p>Different UI
+    themes</p>
+</div>
+
+
 
         </div>
 
