created the fifth block of the first map

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 </div>
 
 
+
+<div class="block">
+  <img src="./images/grey-circle.png" alt="">
+  <img src="./images/line.png" alt="">
+  <p>Ledger, Trezor
+    integrations</p>
+</div>
+
               </div>
 
 
