added the fifth block of the second map

--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
 </div>
 
 
+<div class="block">
+  <img src="./images/grey-circle.png" alt="">
+  <img src="./images/line.png" alt="">
+  <p>In-app marketplace
+    or DApp browser</p>
+</div>
+
         </div>
 
 
