created the fifth block to the third map

--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
 </div>
 
 
+<div class="block">
+  <img src="./images/grey-circle.png" width="6" alt="">
+  <img src="./images/grey-circle.png" width="6" alt="">
+  <img src="./images/grey-circle.png" width="6" alt="">
+  <p>and lots more</p>
+</div>
+
+
 
         </div>
 
