--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <div class="block">
               <img src="./images/green-circle.png" alt="">
-              <img src="./images/line.png" alt="">
+              <img class="line" src="./images/line.png" alt="">
               <span>May 2018</span>
               <p>Blockstack 
                 Autorisation</p>
@@ -66,14 +66,14 @@
 
     <div class="block">
         <img src="./images/green-circle.png" alt="">
-        <img src="./images/line.png" alt="">
+        <img class="line" src="./images/line.png" alt="">
         <p>Support
           ERC20 tokens</p>
   </div>
 
   <div class="block">
      <img src="./images/blue-circle.png" alt="">
-     <img src="./images/line.png" alt="">
+     <img class="line" src="./images/line.png" alt="">
      <span>2018 – 2019</span>
      <p>Add more coins:
       ZEC, DCR, XRP...</p>
@@ -82,7 +82,7 @@
 
 <div class="block">
   <img src="./images/grey-circle.png" alt="">
-  <img src="./images/line.png" alt="">
+  <img class="line" src="./images/line.png" alt="">
   <p>Support private key
     in different formats</p>
 </div>
@@ -91,7 +91,7 @@
 
 <div class="block">
   <img src="./images/grey-circle.png" alt="">
-  <img src="./images/line.png" alt="">
+  <img class="line" src="./images/line.png" alt="">
   <p>Ledger, Trezor
     integrations</p>
 </div>
@@ -104,7 +104,7 @@
 
           <div class="block">
             <img src="./images/green-circle.png" alt="">
-            <img src="./images/line.png" alt="">
+            <img class="line" src="./images/line.png" alt="">
             <p>Decentralized
               storage Gaia</p>
          </div>
@@ -112,14 +112,14 @@
 
     <div class="block">
       <img src="./images/green-circle.png" alt="">
-      <img src="./images/line.png" alt="">
+      <img class="line" src="./images/line.png" alt="">
       <p>Support
         Custom token</p>
     </div>
 
 <div class="block">
   <img src="./images/grey-circle.png" alt="">
-  <img src="./images/line.png" alt="">
+  <img class="line" src="./images/line.png" alt="">
   <p>Blockstack
   contact list</p>
 </div>
@@ -127,7 +127,7 @@
 
 <div class="block">
    <img src="./images/grey-circle.png" alt="">
-   <img src="./images/line.png" alt="">
+   <img class="line" src="./images/line.png" alt="">
    <p>Multilanguage
     support</p>
 </div>
@@ -135,7 +135,7 @@
 
 <div class="block">
   <img src="./images/grey-circle.png" alt="">
-  <img src="./images/line.png" alt="">
+  <img class="line" src="./images/line.png" alt="">
   <p>In-app marketplace
     or DApp browser</p>
 </div>
