added a class to the last block

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </div>
 
 
-<div class="block">
+<div class="block three-circle">
   <img src="./images/grey-circle.png" width="6" alt="">
   <img src="./images/grey-circle.png" width="6" alt="">
   <img src="./images/grey-circle.png" width="6" alt="">
