--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <div class="block">
     <img src="./images/green-circle.png" alt="">
-    <span class="june-span">June 2018</span>
+    <span>June 2018</span>
     <p>Exchange powered
       by ShapeShift</p>
 </div>
