--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
               <div class="first-map">
 
-            <div class="block">
+            <div class="block first-block">
               <img src="./images/green-circle.png" alt="">
               <img class="line" src="./images/line.png" alt="">
               <span>May 2018</span>
