--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </header>
 
       <main>
-        <div class="first section">
-          <div class="article">
+        <section>
+          <article>
             <p>
               Dappy is light wallet powered by Blockstack. It uses Gaia
               decentralized storage and encryption option. Dappy doesn't store
@@ -38,18 +38,18 @@
               the Gaia. Dappy was created by the BC Net that trust in crypto and
               decentralized applications.
             </p>
-          </div>
+          </article>
 
-          <div class="article">
+          <article>
             <h3>Free and open source</h3>
             <img src="./images/main-img1.jpg" alt="">
             <p>
               Fully open and transparent wallet. Our code is
               <strong>open source</strong> and trusted by Blockstack Team.
             </p>
-          </div>
+          </article>
 
-          <div class="article">
+          <article>
             <h3>Roadmap</h3>
             <div class="roadmap">
 
@@ -191,37 +191,37 @@
 
             </div>
             
-          </div>
-        </div>
+          </article>
+        </section>
 
-        <div class="second-section">
-          <div class="article">
+        <section>
+          <article>
             <h3>Multi-currencies</h3>
             <img src="./images/main-img3.jpg" alt="">
             <p>
               Receive, send and store the most popular coins, like Bitcoin,
               Ethereum, Litecoin, Dash and lots more.
             </p>
-          </div>
+          </article>
 
-          <div class="article">
+          <article>
             <h3>Tokens</h3>
             <img src="./images/main-img4.jpg" alt="">
             <p>
               Full support for any tokens on Ethereum network. Bitcoin tokens
               (Omnilayer) is coming soon.
             </p>
-          </div>
+          </article>
 
-          <div class="article sixth-article">
+          <article class="sixth-article">
             <h3>Exchange</h3>
             <p>
               In-app exchange is supported by ShapeShift, it allows to convert
               coins to each other in the most intuitive and easiest way.
             </p>
             <img src="./images/main-img5.jpg" alt="">
-          </div>
-        </div>
+          </article>
+        </section>
       </main>
 
       <footer>
