--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
               <div class="first-map">
 
-            <div class="block first-block">
+            <div class="block indent">
               <img src="./images/green-circle.png" alt="">
               <img class="line" src="./images/line.png" alt="">
               <span>May 2018</span>
@@ -71,7 +71,7 @@
           ERC20 tokens</p>
   </div>
 
-  <div class="block">
+  <div class="block indent">
      <img src="./images/blue-circle.png" alt="">
      <img class="line" src="./images/line.png" alt="">
      <span>2018 – 2019</span>
@@ -153,7 +153,7 @@
             DCR, DACH</p>
         </div>
 
-<div class="block">
+<div class="block indent">
     <img src="./images/green-circle.png" alt="">
     <span>June 2018</span>
     <p>Exchange powered
