--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
       <main>
         <section>
-          <article>
-            <h2></h2>
+          <div  class="article">
             <p>
               Dappy is light wallet powered by Blockstack. It uses Gaia
               decentralized storage and encryption option. Dappy doesn't store
@@ -39,18 +38,18 @@
               the Gaia. Dappy was created by the BC Net that trust in crypto and
               decentralized applications.
             </p>
-          </article>
+          </div>
 
-          <article>
+          <div  class="article">
             <h3>Free and open source</h3>
             <img src="./images/main-img1.jpg" alt="">
             <p>
               Fully open and transparent wallet. Our code is
               <strong>open source</strong> and trusted by Blockstack Team.
             </p>
-          </article>
+          </div>
 
-          <article>
+          <div  class="article">
             <h3>Roadmap</h3>
             <div class="roadmap">
 
@@ -192,27 +191,27 @@
 
             </div>
             
-          </article>
+          </div>
         </section>
 
         <section>
-          <article>
+          <div  class="article">
             <h3>Multi-currencies</h3>
             <img src="./images/main-img3.jpg" alt="">
             <p>
               Receive, send and store the most popular coins, like Bitcoin,
               Ethereum, Litecoin, Dash and lots more.
             </p>
-          </article>
+          </div>
 
-          <article>
+          <div class="article">
             <h3>Tokens</h3>
             <img src="./images/main-img4.jpg" alt="">
             <p>
               Full support for any tokens on Ethereum network. Bitcoin tokens
               (Omnilayer) is coming soon.
             </p>
-          </article>
+          </div>
 
           <article class="sixth-article">
             <h3>Exchange</h3>
